package local.sop.sopinfo.messageperson.application.api.dto;

import local.sop.common.libs.sharedkernel.compositekey.dtos.CompositeKey;

public record CreatedMessagePersonResult(
    CompositeKey id
) {

}
