package local.sop.sopinfo.sharedkernel.valueobjects;

import java.util.UUID;

public interface DomainId {
    UUID value();
}
