@startuml MessagePerson BC Class Diagram
top to bottom direction
title Message Person BC Class Diagram
skinparam packageStyle rectangle
skinparam Shadowing false
skinparam classFontSize 12
skinparam classFontName Arial
skinparam WrapWidth 260

folder "Message Person BC" #LightGrey {

	package "message-person-api" #LightBlue {
		package "local.sop.datawarehouse.messagePerson" as ApiRoot {
			package "application.api" {

				interface MessagePersonDirectory {
					+ createMessagePerson(cmd: CreateMessagePersonCmd): CreatedMessagePersonResult
					+ findByMessageRef(messageRef: UUID): List<MessagePersonResponse>
					+ findByPersonRef(personRef: UUID): List<MessagePersonResponse>
					+ findByMessageRefAndPersonRef(messageRef: UUID, personRef: UUID): MessagePersonResponse
					+ activate(cmd: ToggleActivateMessagePersonCmd): MessagePersonResponse
					+ deactivate(cmd: ToggleActivateMessagePersonCmd): MessagePersonResponse
				}

				package "dto" {
					class CreateMessagePersonCmd <<record>> {
						- messageRef: UUID
						- personRef: UUID
					}

					class ToggleActivateMessagePersonCmd <<record>> {
						- messageRef: UUID
						- personRef: UUID
					}

					class CreatedMessagePersonResult <<record>> {
						- messageRef: UUID
						- personRef: UUID
					}

					class MessagePersonResponse <<record>> {
						- id: MessagePersonId
						- messageRef: UUID
						- personRef: UUID
						- createdAt: LocalDateTime
						- isActive: boolean
					}
				}
			}
		}
	}

	package "message-person-impl" #LightSteelBlue {
		package "local.sop.datawarehouse.messagePerson" as ImplRoot {

			class MessagePersonStartApplication {
				+ {static} main(args: String[]): void
			}

			package "domain" #LightCoral {
				package "model" {

					class MessagePerson <<AggregateRoot>> {
						- id: MessagePersonId
						- messageRef: MessageRef
						- personRef: PersonRef
						- createdAt: CreatedAt
						- active: Boolean
						+ MessagePerson(id: MessagePersonId, messageRef: MessageRef, personRef: PersonRef, createdAt: CreatedAt, active: Boolean)
						+ getId(): MessagePersonId
						+ getMessageRef(): MessageRef
						+ getPersonRef(): PersonRef
						+ getCreatedAt(): CreatedAt
						+ getActive(): Boolean
						+ builder(): Builder
					}

					class Builder {
						+ id(id: MessagePersonId): Builder
						+ messageRef(messageRef: MessageRef): Builder
						+ personRef(personRef: PersonRef): Builder
						+ createdAt(createdAt: CreatedAt): Builder
						+ active(active: Boolean): Builder
						+ build(): MessagePerson
					}
					MessagePerson ..> Builder

					package "valueobjects" {

						together {

							class MessagePersonId <<ValueObject>> {
								- messageRef: MessageRef
								- personRef: PersonRef
							}

							class MessageRef <<ValueObject>> {
								- value: UUID
								+ value(): UUID
							}

							class PersonRef <<ValueObject>> {
								- value: UUID
								+ value(): UUID
							}

							class CreatedAt <<ValueObject>> {
								- value: LocalDateTime
								+ now(): CreatedAt
								+ value(): LocalDateTime
								+ toString(): String
							}

							' ===== Valueobjects Invariants =====

							note right of MessageRef
							- implements DomainId
							- must not be null
							end note

							note right of PersonRef
							- implements DomainId
							- must not be null
							end note

							note right of MessagePersonId
							- messageRef must not be null
							- personRef must not be null
							end note

							note right of CreatedAt
							- must not be null
							- format: dd-MM-yyyy HH:mm:ss
							end note

						}
						
					}
					
					' ===== model Invariant =====
					note right of MessagePerson
						- active must not be null
					end note

				}

				package "ports.out" #LightYellow {
					interface MessagePersonRepositoryPort {
						+ save(messagePerson: MessagePerson): MessagePerson
						+ findByMessageRef(messageRef: MessageRef): List<MessagePerson>
						+ findByPersonRef(personRef: PersonRef): List<MessagePerson>
						+ findByMessageRefAndPersonRef(messageRef: MessageRef, personRef: PersonRef): Optional<MessagePerson>
						+ activate(id: MessagePersonId): Optional<MessagePerson>
						+ deactivate(id: MessagePersonId): Optional<MessagePerson>
					}
				}

				package "service" {
					interface MessagePersonDomain {
						+ createMessagePerson(messagePerson: MessagePerson): MessagePerson
					}

					class MessagePersonDomainService {
						+ createMessagePerson(messagePerson: MessagePerson): MessagePerson
					}

					class MessagePersonDomainConfig
				}
			}

			package "application.service" {
				class MessagePersonApplicationService {
					- domain: MessagePersonDomain
					- repository: MessagePersonRepositoryPort
					+ createMessagePerson(cmd: CreateMessagePersonCmd): CreatedMessagePersonResult
					+ findByMessageRef(messageRef: UUID): List<MessagePersonResponse>
					+ findByPersonRef(personRef: UUID): List<MessagePersonResponse>
					+ findByMessageRefAndPersonRef(messageRef: UUID, personRef: UUID): MessagePersonResponse
					+ activate(cmd: ToggleActivateMessagePersonCmd): MessagePersonResponse
					+ deactivate(cmd: ToggleActivateMessagePersonCmd): MessagePersonResponse
				}
			}

			package "interfaceweb" #Yellow {
				class MessagePersonController {
					+ createMessagePerson(request: CreateMessagePersonCmd): ResponseEntity<CreatedMessagePersonResult>
					+ findByMessageRef(messageRef: UUID): ResponseEntity<List<MessagePersonResponse>>
					+ findByPersonRef(personRef: UUID): ResponseEntity<List<MessagePersonResponse>>
					+ findByMessageRefAndPersonRef(messageRef: UUID, personRef: UUID): ResponseEntity<MessagePersonResponse>
					+ activate(request: ToggleActivateMessagePersonCmd): ResponseEntity<MessagePersonResponse>
					+ deactivate(request: ToggleActivateMessagePersonCmd): ResponseEntity<MessagePersonResponse>
				}
			}

			package "interfaceadapters.persistence" #Yellow {
				package "jpa" {

					class MessagePersonEntityId <<@Embeddable>> {
						- messageRef: UUID
						- personRef: UUID
					}

					class MessagePersonEntity <<@Entity>> {
						- id: MessagePersonEntityId
						- createdAt: LocalDateTime
						- active: boolean
					}

					interface MessagePersonSpringDataRepository <<SpringDataRepository>> {
						+ findByMessageRefAndPersonRef(messageRef: UUID, personRef: UUID): Optional<MessagePersonEntity>
						+ findByMessageRef(messageRef: UUID): List<MessagePersonEntity>
						+ findByPersonRef(personRef: UUID): List<MessagePersonEntity>
					}

					class MessagePersonRepositoryAdapter {
						+ save(messagePerson: MessagePerson): MessagePerson
						+ findByMessageRef(messageRef: MessageRef): List<MessagePerson>
						+ findByPersonRef(personRef: PersonRef): List<MessagePerson>
						+ findByMessageRefAndPersonRef(messageRef: MessageRef, personRef: PersonRef): Optional<MessagePerson>
						+ activate(id: MessagePersonId): Optional<MessagePerson>
						+ deactivate(id: MessagePersonId): Optional<MessagePerson>
					}

					class MessagePersonJpaMapper {
						+ toDomain(entity: MessagePersonEntity): MessagePerson
						+ toEntity(domain: MessagePerson): MessagePersonEntity
						+ toDomainList(entities: List<MessagePersonEntity>): List<MessagePerson>
					}
				}

				package "inmemory" {
					class InMemoryMessagePersonRepositoryImpl {
						+ save(messagePerson: MessagePerson): MessagePerson
						+ findByMessageRef(messageRef: MessageRef): List<MessagePerson>
						+ findByPersonRef(personRef: PersonRef): List<MessagePerson>
						+ findByMessageRefAndPersonRef(messageRef: MessageRef, personRef: PersonRef): Optional<MessagePerson>
						+ activate(id: MessagePersonId): Optional<MessagePerson>
						+ deactivate(id: MessagePersonId): Optional<MessagePerson>
					}
				}
			}
		}
	}

	package "sharedkernel" #LightBlue {
		package "local.sop.common.libs.sharedkernel" as SharedKernelRoot {
			package "exceptions" {
				class ValidationException
				class NotFoundException
				class Other
			}
			package "valueobjects" {
				interface DomainId
			}
		}
	}
}

MessagePersonController ..> MessagePersonDirectory : uses
MessagePersonApplicationService ..|> MessagePersonDirectory : implements
MessagePersonApplicationService ..> MessagePersonDomain : uses
MessagePersonApplicationService ..> MessagePersonRepositoryPort : uses
MessagePersonDomainService ..|> MessagePersonDomain : implements
MessagePersonDomainConfig ..> MessagePersonDomainService : @Bean creates
MessagePersonDomainConfig ..> MessagePersonDomain : provides bean
MessagePersonRepositoryAdapter ..|> MessagePersonRepositoryPort : implements
InMemoryMessagePersonRepositoryImpl ..|> MessagePersonRepositoryPort : implements
MessagePersonRepositoryAdapter ..> MessagePersonSpringDataRepository : uses
MessagePersonRepositoryAdapter ..> MessagePersonJpaMapper : uses
MessagePersonJpaMapper ..> MessagePersonEntity : maps
MessagePersonJpaMapper ..> MessagePerson : maps

MessagePerson ..> MessagePersonId
MessagePersonId ..> MessageRef
MessagePersonId ..> PersonRef
MessagePerson ..> CreatedAt

ImplRoot ..> SharedKernelRoot : depends on sharedkernel

@enduml